Fix links at bottom being too close to each other
Two links at the bottom of the [MDL home page](http://getmdl.io) have the text `Web Starter Kit`
and `Help` and are touching.

--- a/docs/_assets/main.css
+++ b/docs/_assets/main.css
@@ -1319,3 +1319,6 @@ code[class*=language-], pre[class*=language-] {
   max-width: 640px;
   margin: 60px 0 40px 0;
 }
+footer > ul:last-child > li:first-child {
+  margin-right: 10px;
+}
